notejam-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: notejam
  namespace: apps
  selfLink: /apis/extensions/v1beta1/namespaces/apps/ingresses/notejam
  uid: 59181e8d-4db5-4a34-8e39-864540f01346
  resourceVersion: '1368590'
  generation: 1
  creationTimestamp: '2020-11-18T18:16:45Z'
  managedFields:
    - manager: nginx-ingress-controller
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
      time: '2020-11-18T18:17:30Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:rules': {}
        'f:status':
          'f:loadBalancer':
            'f:ingress': {}
spec:
  rules:
    - host: notejam.k8s.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: notejam-svc
              servicePort: 5000
status:
  loadBalancer:
    ingress:
      - ip: 172.30.80.53
